# vim-clone

./: Cargo.toml  README.md  config.json
benches/: syntax_benchmark.rs
src/: app.rs  app_config.rs  config.rs  constants.rs  event.rs  lib.rs  main.rs  pane.rs  syntax.rs  ui.rs  utils.rs  window.rs
src/event/: command.rs  insert.rs  normal.rs  right_panel_input.rs  visual.rs
src/ui/: completion.rs  editor.rs  mod.rs  panels.rs
tests/: integration_tests.rs
themes/: default.json
