[package]
name = "vim-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
ratatui = { version = "0.26.1", features = ["crossterm"] }
arboard = "3"
unicode-segmentation = "1.11.0"
unicode-width = "0.1.11"
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12.22"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "syntax_benchmark"
harness = false
